ensure close button is always visible

--- a/src/components/editor/editor.module.pcss
+++ b/src/components/editor/editor.module.pcss
@@ -24,18 +24,19 @@
       padding: 0;
 
       & li {
-        padding: 0.75rem 0.5rem;
+        padding: 0.75rem 2rem 0.75rem 0.5rem;
         border-right: solid var(--color-secondary-10) 1px;
         border-bottom: 2px solid var(--color-secondary-20);
         display: flex;
         cursor: pointer;
         overflow: hidden;
+        position: relative;
 
         &.active {
           border-bottom: 2px solid var(--color-aero);
 
-          & .close {
-            visibility: visible;
+          & .closeContainer {
+            display: flex;
           }
 
           &:hover {
@@ -45,6 +46,10 @@
 
         &:hover {
           border-bottom: 2px solid var(--color-secondary-10);
+
+          & .closeContainer {
+            display: flex;
+          }
         }
       }
 
@@ -63,26 +68,27 @@
         margin-right: 0.5rem;
       }
 
-      & li button {
-        flex-shrink: 0;
-        margin-left: 0.5rem;
+      & li .closeContainer {
+        display: none;
+        position: absolute;
+        right: 0;
+        top: 0;
+        padding: 0 0.25rem;
+        height: 100%;
+        background-color: var(--color-secondary-20);
       }
     }
   }
 }
 
-li:hover .close {
-  visibility: visible;
-}
-
 .close {
-  visibility: hidden;
   background: none;
   border: none;
   padding: 0;
   width: 1.25rem;
   height: 1.25rem;
   cursor: pointer;
+  margin: auto;
 
   & svg {
     fill: var(--color-primary-10);
